# FritzboxSoapAPI

./: .gitignore  FritzBoxServices.py  discover_services.py  fritzbox_soap.py  presence_detection.py  pyproject.toml  readme.md  settings.py  settings.py.example  setup.cfg  setup.py  simple_telegram.py
examples/: getHostList.py  presence_detection.py  settings.py.example  simple_telegram.py
src/FritzboxSoapAPI/: __init__.py  services.py  stubgen.py
src/FritzboxSoapAPI/template/: ServiceTemplate.py
