[metadata]
name= FritzboxSoapAPI


[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    lxml
    requests
    beautifulsoup4

[options.packages.find]
include_package_data = true
where = src

[options.package_data]
FritzboxSoapApi = template/ServiceTemplate.py